--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /lib
 /classes
 /checkouts
+data/
 pom.xml
 pom.xml.asc
 *.jar
@@ -11,3 +12,5 @@ pom.xml.asc
 .lein-plugins
 .lein-repl-history
 test/*.xlsx
+*.*#
+.#*.*
